--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-top">
+<nav class="navbar">
   <div class="container-fluid">
     <div class="navbar-header ">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -17,7 +17,7 @@
             <a href="/about">About</a>
           </li>
           <li>
-            <a href="/search">Find Helpers</a>
+            <a href="/first">Examples</a>
           </li>
       </ul>
     </div>
