--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,6 +18,13 @@
             </p>
         </div>
     </div>
+        <header>
+      <h1>Header Content</h1>
+    </header>
+
+    <section>
+      <h1>Section Content</h1>
+    </section>
     <% include ../partials/footer %>
   </div>
     <% include ../partials/body %>
